[package]
name = "deepfreeze"
version = "0.1.2"
authors = ["Adam Leyshon <aleyshon@thecodecache.net>"]
edition = "2018"
build = "build.rs"

[[bin]]
name = "deepfreeze"
path = "src/bin/server.rs"

[[bin]]
name = "configure"
path = "src/bin/configure.rs"

[[bin]]
name = "isebot"
path = "src/bin/isebot.rs"


[dependencies]
actix-http = { version = "3.0.4"}
actix-rt = "2.7.0"
actix-service = "2.0.2"
actix-web = { version = "4.0.1"}
bb8 = "0.7.1"
bb8-redis = "0.10.1"
bigdecimal = { version = "^0.1.2", features = ["serde"] }
blake2 = "^0.8"
bytes = "^0.5"
chrono = { version = "^0.4", features = ["serde"] }
clap = "^2.33.3"
config = "^0.11.0"
derive_more = "^0.99.16"
diesel = { version = "^1.4.8", features = ["postgres", "serde_json", "r2d2", "numeric", "chrono", "uuidv07"] }
diesel_migrations = "^1.4.0"
dotenv = "^0.15.0"
fastrand = "^1.4.0"
flate2 = "^1.0.18"
futures = "^0.3.5"
futures-util = "^0.3.5"
hex = "^0.4.2"
hostname = "^0.3.0"
http = "0.2.4"
#http-api-problem = { version = "0.51.0", features = ["actix-web"] }
itertools = "^0.10.0"
itsdangerous = "^0.4.0"
lazy_static = "^1.4.0"
log = "^0.4.11"
macros = { path = "./macros" }
mime = "^0.3.16"
num_cpus = "^1.13.0"
num_enum = "^0.5.1"
once_cell = "1.8.0"
parking_lot = "^0.12.0"
prost = "^0.6.1"
protobuf = "^2.17.0"
r2d2 = "0.8.9"
rand = { version = "^0.8.4", features = ["std", "std_rng"] }
semver-parser = "^0.10.0"
serde = "^1.0.115"
serde_derive = "^1.0.116"
serde_json = "^1.0.57"
serenity = "0.10.10"
simple_logger = "^1.16.0"
steamid-ng = "^1.0.0"
strum = "^0.16.0"
strum_macros = "^0.16.0"
threadpool = "^1.8.1"
tokio = { version = "1.17.0", features = ["rt-multi-thread"] }
took = "^0.1.2"
took-macro = "^0.1"
uuid = { version = "^0.8.2", features = ["serde", "v4"] }

[build-dependencies]
prost-build = "0.6.1"

[profile.release]
lto = "thin"
opt-level = 3

